[package]
name = "obfsctr_cli"
version = "0.1.0"
authors = ["sokomishalov <sokomishalov@mail.ru>"]
edition = "2018"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
regex = "1.3.6"
threadpool = "1.8.0"
fasthash = "0.4.0"
colored = "1.9.3"
walkdir = "2.3.1"

[dependencies.obfsctr_core]
path = "../obfsctr_core"
version = "0.1.0"