[package]
name = "obfsctr_cli"
version = "0.1.0"
authors = ["sokomishalov <sokomishalov@mail.ru>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
regex = "1.5.3"
threadpool = "1.8.1"
fasthash = "0.4.0"
colored = "2.0.0"
walkdir = "2.3.1"

[dependencies.obfsctr_core]
path = "../obfsctr_core"
version = "0.1.0"